[gd_scene load_steps=2 format=2]

[ext_resource path="res://Editor/Docks/Configuration/Configuration.gd" type="Script" id=1]

[node name="Configuration" type="VBoxContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -357.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_right = 357.0
margin_bottom = 14.0
text = "World Configuration:"
align = 1

[node name="GridContainer" type="GridContainer" parent="."]
margin_top = 18.0
margin_right = 357.0
margin_bottom = 174.0
columns = 2

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 5.0
margin_right = 115.0
margin_bottom = 19.0
text = "Release Date:"

[node name="ReleaseDate" type="HBoxContainer" parent="GridContainer"]
margin_left = 119.0
margin_right = 357.0
margin_bottom = 24.0

[node name="Day" type="SpinBox" parent="GridContainer/ReleaseDate"]
margin_right = 76.0
margin_bottom = 24.0
hint_tooltip = "Day"
size_flags_horizontal = 3
min_value = 1.0
max_value = 31.0
value = 1.0
suffix = "D"

[node name="Month" type="SpinBox" parent="GridContainer/ReleaseDate"]
margin_left = 80.0
margin_right = 157.0
margin_bottom = 24.0
hint_tooltip = "Month
"
size_flags_horizontal = 3
min_value = 1.0
max_value = 12.0
value = 1.0
suffix = "M"

[node name="Year" type="SpinBox" parent="GridContainer/ReleaseDate"]
margin_left = 161.0
margin_right = 238.0
margin_bottom = 24.0
hint_tooltip = "Month
"
size_flags_horizontal = 3
min_value = 2020.0
max_value = 2300.0
value = 2020.0
allow_greater = true
suffix = "Y"

[node name="Label3" type="Label" parent="GridContainer"]
margin_top = 33.0
margin_right = 115.0
margin_bottom = 47.0
text = "Author Name(s):"

[node name="Author" type="LineEdit" parent="GridContainer"]
margin_left = 119.0
margin_top = 28.0
margin_right = 357.0
margin_bottom = 52.0
size_flags_horizontal = 3
caret_blink = true

[node name="Label4" type="Label" parent="GridContainer"]
margin_top = 99.0
margin_right = 115.0
margin_bottom = 113.0
text = "Track Description:"

[node name="TrackDescription" type="TextEdit" parent="GridContainer"]
margin_left = 119.0
margin_top = 56.0
margin_right = 357.0
margin_bottom = 156.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3

[node name="Label" type="Label" parent="."]
margin_top = 178.0
margin_right = 357.0
margin_bottom = 192.0
text = "Notes for Authors:"
align = 1

[node name="Notes" type="TextEdit" parent="."]
margin_top = 196.0
margin_right = 357.0
margin_bottom = 576.0
rect_min_size = Vector2( 0, 100 )
size_flags_vertical = 3

[node name="SaveWorldConfig" type="Button" parent="."]
margin_left = 157.0
margin_top = 580.0
margin_right = 200.0
margin_bottom = 600.0
size_flags_horizontal = 4
text = "SAVE"

[connection signal="pressed" from="SaveWorldConfig" to="." method="_on_SaveWorldConfig_pressed"]
